<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.ladyluh.nekoffee</groupId>
        <artifactId>Nekoffee</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>nyxiabot-commands</artifactId>
    <packaging>jar</packaging>

    <name>NyxiaBot - Commands</name>

    <dependencies>
        <dependency>
            <groupId>com.ladyluh.nekoffee</groupId>
            <artifactId>nekoffee-api</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.ladyluh.nekoffee</groupId>
            <artifactId>nekoffee-builder-util</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.ladyluh.nekoffee</groupId>
            <artifactId>nekoffee-core</artifactId> 
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.7</version>
        </dependency>
        <dependency>
            <groupId>com.ladyluh.nekoffee</groupId>
            <artifactId>nyxiabot-config</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.ladyluh.nekoffee</groupId>
            <artifactId>nyxiabot-database</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.ladyluh.nekoffee</groupId>
            <artifactId>nyxiabot-services</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.ladyluh.nekoffee</groupId>
            <artifactId>nyxiabot-cache</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>